--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <java.source.version>1.8</java.source.version>
+        <java.target.version>1.8</java.target.version>
+        <maven.complier.source>1.8</maven.complier.source>
+        <maven.complier.target>1.8</maven.complier.target>
         <spring-cloud.version>Edgware.SR5</spring-cloud.version>
     </properties>
 
@@ -94,6 +98,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>SpringBootSecurityOAuth2SSO</finalName>
     </build>
 
 </project>
